--- a/Assets/style.css
+++ b/Assets/style.css
@@ -23,11 +23,13 @@ main{
     display: flex;
     justify-content: space-around;
     background-color: #fff;
+    padding: 200px 0px;
 }
 article{
     display: flex;
     flex-direction: column-reverse;
     background-color: #1B506F;
+    border-radius: 8px;
 }
 img{
     border-radius: 100%;
